// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page should call startUserLogin props for valid form submission 1`] = `
<div
  className="create__request"
>
  <div
    className="create__request"
  >
    <form
      className="auth__form"
      onSubmit={[Function]}
    >
      <div
        className="auth__body"
      >
        <div>
          <label
            className="label request__label"
            htmlFor="username"
          >
            Username:
            <div>
              <input
                className="form__input"
                name="username"
                onChange={[Function]}
                placeholder="enter your username"
                type="text"
                value="allison"
              />
            </div>
          </label>
        </div>
        <div>
          <label
            className="label request__label"
            htmlFor="password"
          >
            Password:
            <div>
              <input
                className="form__input"
                name="password"
                onChange={[Function]}
                placeholder="enter your password"
                type="password"
                value="passing"
              />
            </div>
          </label>
        </div>
        <div>
          <Button
            className="button--big"
            text="Login"
            type="submit"
          />
        </div>
        <div
          className="auth__extra"
        >
          <div
            className="auth__extra-item"
          >
            Yet to create an account?
          </div>
          <Link
            className="auth__extra-item"
            replace={false}
            to="/signup"
          >
            Sign up
          </Link>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Login Page should correctly render LoginPage 1`] = `
<div
  className="create__request"
>
  <div
    className="create__request"
  >
    <form
      className="auth__form"
      onSubmit={[Function]}
    >
      <div
        className="auth__body"
      >
        <div>
          <label
            className="label request__label"
            htmlFor="username"
          >
            Username:
            <div>
              <input
                className="form__input"
                name="username"
                onChange={[Function]}
                placeholder="enter your username"
                type="text"
                value=""
              />
            </div>
          </label>
        </div>
        <div>
          <label
            className="label request__label"
            htmlFor="password"
          >
            Password:
            <div>
              <input
                className="form__input"
                name="password"
                onChange={[Function]}
                placeholder="enter your password"
                type="password"
                value=""
              />
            </div>
          </label>
        </div>
        <div>
          <Button
            className="button--big"
            text="Login"
            type="submit"
          />
        </div>
        <div
          className="auth__extra"
        >
          <div
            className="auth__extra-item"
          >
            Yet to create an account?
          </div>
          <Link
            className="auth__extra-item"
            replace={false}
            to="/signup"
          >
            Sign up
          </Link>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Login Page should redirect user 1`] = `
<Redirect
  push={false}
  to="/admin-dashboard"
/>
`;

exports[`Login Page should return error for invalid form submission 1`] = `
<div
  className="create__request"
>
  <div
    className="create__request"
  >
    <form
      className="auth__form"
      onSubmit={[Function]}
    >
      <div
        className="auth__body"
      >
        <div>
          <label
            className="label request__label"
            htmlFor="username"
          >
            Username:
            <div>
              <input
                className="form__input"
                name="username"
                onChange={[Function]}
                placeholder="enter your username"
                type="text"
                value=""
              />
            </div>
          </label>
          <div
            className="form__error"
            key="username field is required."
          >
            username field is required.
          </div>
        </div>
        <div>
          <label
            className="label request__label"
            htmlFor="password"
          >
            Password:
            <div>
              <input
                className="form__input"
                name="password"
                onChange={[Function]}
                placeholder="enter your password"
                type="password"
                value=""
              />
            </div>
          </label>
          <div
            className="form__error"
            key="password field is required."
          >
            password field is required.
          </div>
        </div>
        <div>
          <Button
            className="button--big"
            text="Login"
            type="submit"
          />
        </div>
        <div
          className="auth__extra"
        >
          <div
            className="auth__extra-item"
          >
            Yet to create an account?
          </div>
          <Link
            className="auth__extra-item"
            replace={false}
            to="/signup"
          >
            Sign up
          </Link>
        </div>
      </div>
    </form>
  </div>
</div>
`;
